--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,4 +11,5 @@ dotenv = "0.15.0"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.206", features = ["derive"] }
 serde_json = "1.0.123"
+serde_sheets = "0.1.2"
 tokio = { version = "1.39.2", features = ["full"] }
