--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 anyhow = "1"
+chrono = "0.4.38"
 dotenv = "0.15.0"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.206", features = ["derive"] }
